# AI-Medical-Voice-Assistant

./: .gitignore  LICENSE  pyproject.toml
docs/: README.md
lexa/: __init__.py  bark_tts.py  google_tts.py  gradio_chat.py  ollama_rag.py  voice_assistant.py  whisper_stt.py
